try1 to fix header img too long loading time

--- a/Certif-ResponsiveWebDesign/FourthProject-ProductLandingPage/styles.css
+++ b/Certif-ResponsiveWebDesign/FourthProject-ProductLandingPage/styles.css
@@ -22,7 +22,9 @@ header {
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-image: url("images/Oze-park-2.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
         /* nav */
